TEST_PROGRAMS/INVALID/15/declaration1.go
package main

func cool_func(a, b, c) {
	return c
}
